# ecspace

./: .gitignore  CMakeLists.txt  environment.yml
.graveyard/: accelerations_old.h  main.cpp  systems-old.h  test_1.cpp
.graveyard/systems/: animation.h
boyz/: move.sh
examples/: earth_asteroids.cpp  earth_asteroids.cu  helper.h  n_body.cpp
include/: linalg.h
include/linalg/: custom_matrix.h  matrix_concepts.h  matrix_traits.h  matrix_traits_custom_matrix.h  matrix_traits_eigen_dynamic.h
src/: kalman.h
src/ecspace/: traits.h
src/ecspace/core/: accelerations.cu  accelerations.h  components.h  conditions.h  consts.h  systems.h  termination.h  test.cu  test.cuh  twobody.h
src/ecspace/interface/: matrix_traits.h
src/ecspace/interface/cuda/: matrix_traits_cuda.h
src/ecspace/interface/eigen/: matrix_traits_eigen_dynamic.h  matrix_traits_eigen_fixed.h
tests/: CMakeLists.txt
tests/cuda/: README.md  add_cpu.cpp  add_cuda_a_1_thread.cu  add_cuda_b_1_block.cu  add_cuda_c_n_blocks.cu  helper.cuh  nbody_cpu.cpp  nbody_cuda_a_soa.cu  timer.h
tools/: .env  cuda-ubuntu-build.dockerfile  docker-compose.yaml
